--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ management.health.db.enabled=true
 management.health.defaults.enabled=true
 management.health.diskspace.enabled=true
 flyway.baseline-on-migrate=true
+https.disabled=true
