--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,25 @@
 import org.flywaydb.gradle.task.FlywayMigrateTask
 
-buildscript {
-    ext {
-        springBootVersion = "2.0.6.RELEASE"
-    }
-
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
-    }
-}
-
-
 plugins {
     id "java"
-    id "org.flywaydb.flyway" version "5.0.5"
+    id "org.springframework.boot" version "1.5.4.RELEASE"
+    id "org.flywaydb.flyway" version "4.2.0"
 }
-
-apply plugin: 'org.springframework.boot'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
-    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.7")
-    compile("org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion")
-//    compile("mysql:mysql-connector-java:6.0.6")
-    compile("mysql:mysql-connector-java:5.1.44")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("mysql:mysql-connector-java:8.0.12")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+}
+
+springBoot {
+    buildInfo()
 }
 
 def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
