--- a/.travis.yml
+++ b/.travis.yml
@@ -43,11 +43,11 @@ jobs:
       before_deploy:
         - echo "Deploying $RELEASE_TAG to review"
       after_success:
-        - cf login -a $CF_API_URL -u $CF_USERNAME -p $CF_PASSWORD -o $CF_ORG -s review
+        - cf login -a https://api.run.pivotal.io -u $CF_USERNAME -p $CF_PASSWORD -o $CF_ORG -s review
         - scripts/migrate-databases.sh pal-tracker .
       deploy:
         provider: cloudfoundry
-        api: $CF_API_URL
+        api: https://api.run.pivotal.io
         username: $CF_USERNAME
         password: $CF_PASSWORD
         organization: $CF_ORG
