--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
   - name: pal-tracker
-    path: build/libs/pal-tracker-bootleg.jar
+    path: build/libs/pal-tracker.jar
     routes:
       - route: pal-tracker-medoror.cfapps.io
     env:
