downgrading gradle, adding default time entries to test, added application properties for health actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ management.security.enabled=false
 management.health.db.enabled=true
 management.health.defaults.enabled=true
 management.health.diskspace.enabled=true
+flyway.baseline-on-migrate=true
